<resources>
    <string name="app_name">TranslateApp</string>

    <string name="speech_prompt">Say something…</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="permission_message_audio">This app needs to record audio and recognize your speech.</string>
    <string name="permission_message_camera">Applications need permission to camera.</string>
    <string name="permission_message_write">Applications need permission to write storage.</string>
    <string name="network_connection_request">Network connection request! Do you want to turn on the network?</string>
    <string name="listening">Listening…</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_speech_to_text">Speech To Text</string>
    <string name="menu_camera_to_text">Camera To Text</string>
    <string name="menu_image_to_text">Image To Text</string>
    <string name="some_text_vi">Nhấn để nhập văn bản</string>
    <string name="some_text">Press to enter text</string>
    <string name="result_return_here">Result will return here</string>
    <string name="result_return_here_vi">Kết quả sẽ trả về ở đây</string>
    <string name="english">Tiếng Anh</string>
    <string name="vietnamese">Tiếng Việt</string>
    <string name="vie">Vie</string>
    <string name="eng">Eng</string>
    <string name="translate">Translate</string>

    <!-- This is an ad unit ID-->
    <string name="banner_ad_unit_id">ca-app-pub-8947618688254291/7482271967</string>
    <string name="app_id">ca-app-pub-8947618688254291~6284740367</string>


    <!-- WritePad -->
    <string name="preference_main_settings_language_summary">Select Language</string>
    <string name="alternatives">Alternatives</string>
    <string name="preference_main_settings_language_key">preference_main_settings_language_key</string>

    <string name="preference_main_settings_group">Main Settings</string>
    <string name="ime_settings">Sample Settings</string>
    <string name="preference_main_settings_language_title">Language</string>
    <string name="preference_main_settings_language_default">en</string>
    <string name="preference_main_settings_language_dialog_title">Language</string>
    <string name="preference_main_settings_autosuggestion_key">preference_main_settings_autosuggestion_key</string>
    <string name="preference_main_settings_autosuggestion_on">Show Suggestions</string>
    <string name="preference_main_settings_autosuggestion_summary">If ON, suggestions list will automatically appear.</string>
    <string name="preference_recognizer_separate_letters_key">preference_recognizer_separate_letters_key</string>
    <string name="preference_recognizer_single_word_only_key">preference_recognizer_single_word_only_key</string>
    <string name="preference_recognizer_separate_letters_on">Separate Letters</string>
    <string name="preference_recognizer_separate_letters_summary">If ON, do not connect individual letters.</string>
    <string name="preference_recognizer_single_word_only_on">Single Word Only</string>
    <string name="preference_recognizer_single_word_only_summary">If ON, write only one word per recognition session.</string>


    <string-array name="preference_main_settings_language_list">
        <item>Dansk</item>
        <item>Deutsch</item>
        <item>English (Great Britain)</item>
        <item>English (United States)</item>
        <item>Español</item>
        <item>Français</item>
        <item>Italiano</item>
        <item>Nederlands</item>
        <item>Norsk</item>
        <item>Português (Brasil)</item>
        <item>Português (Portugal)</item>
        <item>Svenska</item>
        <item>Suomi</item>
        <item>Bahasa Indonesia</item>
    </string-array>

    <string-array name="preference_main_settings_language_list_values">
        <item>da</item>
        <item>de</item>
        <item>en_uk</item>
        <item>en</item>
        <item>es</item>
        <item>fr</item>
        <item>it</item>
        <item>nl</item>
        <item>nb</item>
        <item>pt_BR</item>
        <item>pt_PT</item>
        <item>sv</item>
        <item>fi</item>
        <item>id</item>
    </string-array>
</resources>
