<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/iron2"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:theme="@style/CustomActionBar"
        android:background="@drawable/background_toolbar_1">
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/lnTop"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvLeftLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="100"
            android:textColor="@color/blue"
            android:layout_gravity="center_vertical"
            android:text="@string/english"
            android:backgroundTint="#ffffff"/>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="0dp"
            android:layout_weight="1"
            android:id="@+id/view2"
            android:layout_gravity="center_vertical"
            app:cardCornerRadius="10dp"
            android:layout_centerHorizontal="true"
            android:innerRadius="0dp"
            android:shape="ring"
            android:thicknessRatio="1.9">
            <ImageView
                android:id="@+id/imgSwapLang"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/ic_swap_lang"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true">
            </ImageView>
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/tvRightLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="100"
            android:textColor="@color/blue"
            android:text="@string/vietnamese"
            android:layout_gravity="center_vertical"
            android:backgroundTint="#ffffff"/>
    </LinearLayout>

    <EditText
        android:id="@+id/edtInput"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:gravity="top"
        android:layout_height="@dimen/edt_input_height"
        android:ems="10"
        android:padding="10dp"
        android:hint="@string/some_text"
        android:textColorHint="@color/status_not_hearing"
        android:inputType="textMultiLine"
        android:layout_below="@+id/lnTop"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:id="@+id/lnUnderEditText"
        android:layout_below="@+id/edtInput"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/border_set"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/lnUnderEditText3"
            android:layout_below="@+id/edtInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/imgCameraPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_camera_photo"/>
            <ImageButton
                android:id="@+id/imgCrop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_crop"
                android:visibility="gone"/>
        </LinearLayout>

        <ImageButton
            android:id="@+id/imgCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_eye_open"/>
        <ImageButton
            android:id="@+id/imgMicrophone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_microphone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnUnderEditText2"
        android:layout_below="@+id/lnUnderEditText"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/border_shadow"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/imgTapTap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_tap_tap"/>
        <ImageButton
            android:id="@+id/imgTranslate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_translate_press"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvResult"
        android:layout_below="@id/lnUnderEditText2"
        android:padding="10dp"
        android:ems="10"
        android:selectAllOnFocus="true"
        android:gravity="top"
        android:text="@string/result_return_here"
        android:layout_margin="10dp"
        android:textSize="15dp"
        android:layout_width="match_parent"
        android:background="@drawable/border_shadow"
        android:textIsSelectable="true"
        android:layout_height="@dimen/tv_result_height" />

    <SurfaceView
        android:id="@+id/surfaceView"
        android:layout_below="@id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>


    <com.theartofdev.edmodo.cropper.CropImageView
        android:id="@+id/cropImageView"
        android:layout_below="@id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:minHeight="100dp"
        android:visibility="gone"/>

    <ListView
        android:id="@+id/lvHistory"
        android:layout_alignWithParentIfMissing="true"
        android:layout_below="@id/cropImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/surfaceView"
        android:visibility="visible">
    </ListView>
</RelativeLayout>

